2009-07-17  Aapo Kojo  <aapo.kojo@nokia.com>

	Release 0.2.47

2009-07-17  Thomas Thurman  <thomas.thurman@collabora.co.uk>

	* matchbox/core/mb-wm-stack.c: If an application has non-application-modal
	windows stacked above application-modal windows, force the application-modal
	windows to the top; otherwise the application will appear to have locked up.
	Fixes NB#115408.

2009-07-16  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Debug macro and hooks to trace window moves and resizes.

	* matchbox/core/mb-wm-debug.h:
	  Added MB_WM_DBG_MOVE_RESIZE().
	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c
	* matchbox/core/mb-wm-client-base.h
	* matchbox/core/mb-wm-client-base.c
	* matchbox/core/mb-window-manager.c:
	  Use it.

2009-07-08  Aapo Kojo <aapo.kojo@nokia.com>

	Release 0.2.46

2009-07-07  Aapo Kojo <aapo.kojo@nokia.com>

	Patch from Laszlo Pere.

	* matchbox/core/mb-wm-client.c:
	 If this transient already has a registered transient parent we 
	 need to remove the link from the parent.
	 Fixes: NB#125222 - Hildon-desktop crashed when image opened from File Manager.

2009-07-03  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* matchbox/core/mb-wm-types.h
	* matchbox/core/mb-wm-atoms.c:
	  Moved _MAEMO_SUPPRESS_ROOT_RECONFIGURATION so we can use to to...
	* matchbox/core/mb-window-manager.c:
	  ...fake a root window reconfig when we see the toggle offed.
	  Do it so that it works both with dummy (current) and with working
	  (experimental) fbdev_drv.so.

2009-07-02  Thomas Thurman  <thomas.thurman@collabora.co.uk>

	* matchbox/core/mb-wm-client-base.c: Add check that a window is
	not an animation actor immediately before we focus it; extends
	fix for NB#120885.  Possibly fixes NB#123909.

2009-06-29  Aapo Kojo <aapo.kojo@nokia.com>

	Release 0.2.45

2009-06-26  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Patch from Laszlo Pere.

	* matchbox/core/mb-wm-client.[ch] (mb_wm_client_is_map_confirmed,
	mb_wm_client_set_map_confirmed): New functions to track if a client