@@ -1,3 +1,13 @@
+2009-07-17  Adam Endrodi  <adam.endrodi@blumsoft.eu>
+
+	NB#128595 [RGBA GTK+/sapwood] modalblocker popping up without
+		  a dialog locks the UI
+	NB#128661 [RGBA GTK+/sapwood] Application windows not mapped,
+		  only titlebar visible.
+
+	* matchbox/core/mb-wm-client-base.c (mb_wm_client_base_realize):
+	  Don't fail with the frame window creation if the client is argb32.
+
 2009-07-17  Aapo Kojo  <aapo.kojo@nokia.com>
 
 	Release 0.2.47
